--- a/index.html
+++ b/index.html
@@ -389,6 +389,42 @@
                         <use href="./images/sprite.svg#icon-close"></use>
                     </svg>
                 </button>
+      <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+      <form action="#" class="modal-form">
+        <div class="modal-field">
+          <label for="user-name" class="input-label">Имя</label>
+          <span class="input-wrapper">
+            <input type="text" name="user-name" id="user-name" class="modal-input">
+            <svg class="input-icon" width="18" height="18">
+              <use href="./images/sprite.svg#icon-vector-1"></use>
+            </svg></span>
+        </div>
+        <div class="modal-field">
+          <label for="user-tel" class="input-label">Телефон</label>
+          <span class="input-wrapper">
+            <input type="tel" name="user-tel" id="user-tel" class="modal-input">
+            <svg class="input-icon" width="18" height="18">
+              <use href="./images/sprite.svg#icon-phone-black-18dp-1-1"></use>
+            </svg></span>
+        </div>
+        <div class="modal-field">
+          <label for="user-email" class="input-label">Почта</label>
+          <span class="input-wrapper">
+            <input type="email" name="user-email" id="user-email" class="modal-input">
+            <svg class="input-icon" width="18" height="18">
+              <use href="./images/sprite.svg#icon-email-black-18dp-1-1"></use>
+            </svg></span>
+        </div>
+        <div class="modal-field">
+          <label for="user-comment" class="input-label">Комментарий</label>
+          <textarea name="user-comment" id="user-comment" class="modal-comment" placeholder="Введите текст"></textarea>
+        </div>
+        <input type="checkbox" id="modal-checkbox" class="modal-checkbox visually-hidden">
+        <label for="modal-checkbox" class="check-text"><span><svg class="check-icon" width="11" height="8">
+              <use href="./images/sprite.svg#icon-Vector1"></use>
+            </svg></span>Соглашаюсь с рассылкой и принимаю&#160;<a href="" class="modal-link">Условия договора</a></label>
+        <button type="submit" class="btn modal-btn">Отправить</button>
+      </form>
             </div>
         </div>
        <script src="./js/modal.js"></script>
