--- a/index.html
+++ b/index.html
@@ -380,6 +380,15 @@
                     </li>
                   </ul>
               </div>
+              <div class="subscribe">
+                <p class="join">Подпишитесь на рассылку</p>
+                <form action="#">
+                  <input type="email" name="email" id="email" placeholder="E-mail" class="subscribe-input" />
+                  <button type="submit" class="btn subscribe-btn">Подписаться<svg class="footer-subscribe-icon">
+                      <use href="./images/sprite.svg#icon-icon-send-1"></use>
+                    </svg> </button>
+                </form>
+              </div>
             </div>
         </footer>
         <div class="backdrop is-hidden" data-modal>
