--- a/portfolio.html
+++ b/portfolio.html
@@ -265,6 +265,16 @@
                 </li>
               </ul>
           </div>
+          <div class="subscribe">
+            <p class="join">Подпишитесь на рассылку</p>
+            <form action="#">
+              <input type="email" name="email" id="email" placeholder="E-mail" class="subscribe-input" />
+              <button type="submit" class="btn subscribe-btn">Подписаться<svg class="footer-subscribe-icon">
+                  <use href="./images/sprite.svg#icon-icon-send-1"></use>
+                </svg> 
+              </button>
+            </form>
+          </div>
         </div>
     </footer>  
 </body>
